# WSB-ticker-counter

./: README.md  main.py  pyproject.toml
